<?xml version="1.0" encoding="utf-8"?><!--
** Copyright 2013 two forty four a.m. LLC <http://www.twofortyfouram.com>
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at <http://www.apache.org/licenses/LICENSE-2.0>
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
-->
<resources>

    <!-- App name -->
    <string name="app_name">ADB Shell Command Tasker Plugin</string>

    <!-- Name of the plug-in that appears in Locale -->
    <string name="plugin_name">ADB Shell Command</string>

    <!-- Hint text in the toast edit text -->

    <string name="ip_address">IP Address</string>

    <string name="port">Port</string>

    <string name="command">ADB Shell Command</string>
    <string name="ip_hint">For example \"192.168.178.15\" or \"localhost\" to connect to this device</string>
    <string name="port_hint">By default android uses port \"5555\"</string>
    <string name="command_hint">For example \"input keyevent POWER\", this will emulate a powerkey press</string>
    <string name="additional">Additional Settings</string>
    <string name="ctrl_c">Emulate Ctrl+C before sending command (needed for some devices).</string>
    <string name="variables">variables</string>
    <string name="timeout">ADB timeout in ms</string>
    <string name="timeout_hint">For example: \"50\". Lower numbers make it faster but less reliable.</string>
    <string name="dialog_message">Hi! Welcome to %1$s.\nThis is a Tasker (or other Locale based apps) plugin, so to use this app, you will need an app like Tasker. You can also use the app without Tasker to test if it works in your situation, however I do encourage you to try Tasker, as it\'s an amazing app and it really brings this plugin to life.</string>
    <string name="test">Test</string>
    <string name="execute">Execute</string>
    <string name="open_tasker">Open Tasker</string>
    <string name="before_start">Before we start…</string>
    <string name="executing">Executing…</string>
    <string name="error">Error!</string>
    <string name="success">Success!</string>
    <string name="logs">Logs:</string>
    <string name="output">Output:</string>
    <string name="channel_name">ADBPlugin Action</string>
    <string name="channel_description">Shows a notification when an action is executed on a foreground service.</string>
    <string name="action_running">ADBPlugin action is running…</string>
    <string name="donate">Donate</string>
    <string name="thank_you">Thank you!</string>
    <string name="big_thank_you">Big thank you!</string>
    <string name="bigger_thank_you">Bigger thank you!</string>
    <string name="couldnt_connect_to_play">Couldn\'t connect to Google Play</string>
    <string name="loading">Loading…</string>
    <string name="biggest_thank_you">Biggest thank you!</string>
    <string name="thank_you_desc">A small token of gratitude, enough for me to buy a coffee at uni</string>
    <string name="big_thank_you_desc">A bigger token of gratitude, enough for me to buy two cups of coffee</string>
    <string name="bigger_thank_you_desc">Even greater token of gratitude, enough for me to buy a large special coffee</string>
    <string name="biggest_thank_you_desc">Greatest token of gratitude! If you\'ve got money to spend and don\'t know how</string>
    <string name="donating">Donating won\'t give you extra features, however, it will considerably support me, the developer, to continue
        making awesome apps like this one!</string>
    <string name="donation_successful">Thank you very much for donating! It is much appreciated :)</string>
    <string name="billing_unavailable">It seems I\'m unable to connect to Google Play at the moment. Retry later or, if you don\'t have Google Play, you can always use PayPal to donate:</string>
    <string name="paypal">https://www.paypal.me/jolanrensen</string>
    <string name="something_wrong">Something went wrong, please try again</string>
</resources>